--- a/public/css/bg.css
+++ b/public/css/bg.css
@@ -15,7 +15,7 @@ background:url(../images/background/bg-subheader.jpg)top fixed;
 .page-services #subheader{background-image:url(../images/background/subheader-2.jpg);}
 .page-about #subheader{background-image:url(../images/background/subheader-3.jpg);}
 .page-blog #subheader{background-image:url(../images/background/subheader-4.jpg);}
-.page-shop #subheader{background-image:url(../images/background/subheader-5.jpg);}
+.page-Market #subheader{background-image:url(../images/background/subheader-5.jpg);}
 .page-contact #subheader{background-image:url(../images/background/subheader-6.jpg);}
 
 #info-address{background:url(../images/background/bg-3.jpg) top fixed;}
