--- a/public/css/mark.chart.css
+++ b/public/css/mark.chart.css
@@ -1,28 +1,31 @@
 
-::selection{
-    background: rgba(23,162,184,0.3);
-}
 .contentChart{
-    display: flex;
+    display: block;
     width: 100%;
-    height: 600px;
-    border-radius: 5px;
-    padding: 5px 0 5px 0;
+    min-height: 600px;
+}
+.contentChart .selectContent{
+    margin-left: 210px;
+}
+ul {
+    margin: 0;
+    padding: 0;
 }
 
 .contentChart nav{
+    float: left;
     position: relative;
+    left: 0px;
     width: 200px;
     height: 50px;
-    align-items: center;
+    text-align: left;
 }
-.contentChart nav label{
+
+.contentChart nav li .clickContent{
     display: block;
     height: 100%;
-    width: 100%;
-    text-align: center;
+    text-align: left;
     line-height: 50px;
-    cursor: pointer;
     position: relative;
     z-index: 1;
     color: #17a2b8;
@@ -30,21 +33,22 @@
     border-radius: 5px;
     transition: all 0.3s ease;
 }
-.contentChart nav label:hover{
-    background: rgba(23,162,184,0.3);
-    background-repeat: no-repeat;
-    background-size: 90%;
+.contentChart nav li .clickContent label
+{
+    cursor: pointer;
 }
-#home:checked ~ nav label.home,
-#blog:checked ~ nav label.blog,
-#code:checked ~ nav label.code,
-#help:checked ~ nav label.help,
-#about:checked ~ nav label.about{
+.contentChart nav li .clickContent:hover{
+    background: rgba(23,162,184,0.3);
+}
+#home:checked ~ nav .clickContent.home,
+#blog:checked ~ nav .clickContent.blog,
+#code:checked ~ nav .clickContent.code,
+#help:checked ~ nav .clickContent.help,
+#about:checked ~ nav .clickContent.about{
     color: #fff;
 }
 .selectContent .content{
     display: none;
-    background: #fff;
 }
 #home:checked ~ .selectContent .content-1,
 #blog:checked ~ .selectContent .content-2,
@@ -54,7 +58,7 @@
 {
     display: block;
 }
-nav label i{
+nav div i{
     padding-right: 7px;
 }
 
@@ -65,7 +69,6 @@ nav .slider{
     left: 0;
     top: 0;
     z-index: 0;
-    border: 2px solid white;
     border-radius: 5px;
     background: #17a2b8;
     transition: all 0.3s ease;
@@ -89,7 +92,6 @@ nav ul li{
     top: 400%;
 }
 .selectContent{
-    border: 1px solid;
     width: 100%;
     margin-left: 10px;
 }
