--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -1,3 +1,9 @@
+.blockForm{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: block;
+    position: relative;
+}
 .loginContent{
     margin: auto;
     box-sizing: border-box;
@@ -7,6 +13,7 @@
     box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
 }
 .loginContent .title{
+    text-align: center;
     font-size: 35px;
     font-weight: 600;
     text-align: center;
@@ -14,7 +21,7 @@
     color: #fff;
     user-select: none;
     border-radius: 15px 15px 0 0;
-    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    background: #fab702;
 }
 .loginContent form{
     padding: 10px 30px 50px 30px;
@@ -91,7 +98,7 @@ form .field input[type="submit"]{
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
-    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    background: #fab702;
     transition: all 0.3s ease;
 }
 form .field input[type="submit"]:active{
