--- a/public/css/mark.chart.css
+++ b/public/css/mark.chart.css
@@ -11,7 +11,6 @@ ul {
     margin: 0;
     padding: 0;
 }
-
 .contentChart nav{
     float: left;
     position: relative;
@@ -35,6 +34,9 @@ ul {
 }
 .contentChart nav li .clickContent label
 {
+    display: block;
+    width: 200px;
+    text-align: center;
     cursor: pointer;
 }
 .contentChart nav li .clickContent:hover{
