--- a/public/css/mark.chart.css
+++ b/public/css/mark.chart.css
@@ -73,7 +73,7 @@ body {
 }
 
 .navbar {
-    background: #ffffff;
+    background: #212121;
     grid-area: nav;
     height: 60px;
     display: flex;
@@ -312,7 +312,7 @@ main {
 /*  SIDEBAR STARTS HERE  */
 
 #sidebar {
-    background: #020509;
+    background: #212121;
     grid-area: sidebar;
     overflow-y: auto;
     padding: 20px;
@@ -324,7 +324,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #f3f4f6;
+    color: #FAB702;
     margin-bottom: 30px;
     /* color: #E85B6B; */
 }
@@ -348,7 +348,6 @@ main {
     font-size: 18px;
     display: none;
 }
-
 .sidebar__menu > h2 {
     color: #3ea175;
     font-size: 16px;
@@ -359,24 +358,24 @@ main {
 }
 
 .sidebar__link {
-    color: #f3f4f6;
+    color: #FAB702;
     padding: 10px;
     border-radius: 3px;
     margin-bottom: 5px;
 }
 
 .active_menu_link {
-    background: rgba(62, 161, 117, 0.3);
-    color: #3ea175;
+    background: #FAB702;
+    color: white;
 }
 
 .active_menu_link a {
-    color: #3ea175 !important;
+    color: white !important;
 }
 
 .sidebar__link > a {
     text-decoration: none;
-    color: #a5aaad;
+    color: #FAB702;
     font-weight: 700;
 }
 
