--- a/public/css/mark.chart.css
+++ b/public/css/mark.chart.css
@@ -1,4 +1,6 @@
-
+@charset "utf-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,500,600,700,900,400);
+@import url(http://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,700,800);
 /*  styling scrollbars  */
 ::-webkit-scrollbar {
     width: 5px;
