--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,24 @@
 /* ================================================== */
 /* body */
 /* ================================================== */
+::-webkit-scrollbar {
+    width: 7px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #a5aaad;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FAB702;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #a5aaad;
+}
 body {
 	font-family: "Open Sans",Arial, Helvetica, sans-serif;
 	font-size: 13px;
