--- a/public/css/css/table.css
+++ b/public/css/css/table.css
@@ -1,6 +1,7 @@
 
 div.dataTables_wrapper {
-    width: 98%;
+    max-width: 1200px;
+    width: 95%;
     padding: 10px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
