--- a/public/css/css/table.css
+++ b/public/css/css/table.css
@@ -2,6 +2,7 @@
 div.dataTables_wrapper {
     max-width: 1200px;
     width: 95%;
+    border-radius: 15px;
     padding: 10px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
