--- a/public/css/css/table.css
+++ b/public/css/css/table.css
@@ -1,13 +1,41 @@
-
-div.dataTables_wrapper {
+.tableInLine {
     max-width: 75rem;
     width: 98%;
+    display: grid;
+    grid-template-columns: 43% 56%;
+    grid-gap: 1%;
+    border-radius: 15px;
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+.marketContainer {
+    max-width: 75rem;
+    width: 98%;
+    display: grid;
+    grid-template-columns: 100%;
+    border-radius: 15px;
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+div.col-sm-12{
+    margin: 0;
+}
+.tableInLine #distTable{
+    padding: 0;
+    margin: 0;
+}
+
+.tableInLine #wardTable{
+    padding: 0;
+    margin: 0;
+}
+div.dataTables_wrapper {
     border-radius: 15px;
     padding: 10px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 0 auto;
-    margin-top: 15px;
 }
 caption .btn-insert {
     font-weight: bold;
