update router admin owens and employee: update table project, news

--- a/public/css/css/table.css
+++ b/public/css/css/table.css
@@ -9,6 +9,9 @@
     margin: 0 auto;
     margin-top: 15px;
 }
+#newsTable tr td{
+    text-align: left !important;
+}
 .marketContainer {
     max-width: 75rem;
     width: 98%;
