--- a/public/css/admin_css/css/form.css
+++ b/public/css/admin_css/css/form.css
@@ -21,7 +21,6 @@ ul{
 
 .wrapper{
     box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
-    padding: 1rem;
     border-radius: 15px;
 }
 
@@ -30,7 +29,7 @@ ul{
 }
 
 .company-info{
-    background: #c9e6ff;
+    background: linear-gradient(to right, #E91E63, #AB47BC);
     text-align: center;
     border-radius: 15px 0 0 15px;
 }
@@ -41,8 +40,10 @@ ul{
 }
 
 .contact{
-    background: #f9feff;
-    border-radius: 0 15px 15px 0;
+    /*background: linear-gradient(to right, #AB47BC, #5C6BC0, #64B5F6);*/
+    background: #FFC107;
+    border-radius: 15px;
+    padding: 15px;
 }
 
 /* FORM CONTACTS
@@ -52,6 +53,30 @@ ul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
     grid-gap: 20px;
+}
+.contact form .firstRow select{
+    width: 100%;
+    height: 35px;
+    color: #263238;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+}
+
+.contact form input{
+    width: 100%;
+    height: 35px;
+    border: none;
+    border-radius: 10px;
+    border-bottom: 3px solid #272c33;
+}
+.contact form input:focus{
+    background-color: #80DEEA;
+    transition: all 0.3s;
+}
+.contact label{
+    color: white;
+    font-weight: bold;
 }
 
 .contact form .secondRow{
@@ -79,30 +104,33 @@ ul{
     grid-column: 1/3;
 }
 
-.contact form button, .contact form input, .contact form textarea{
+.contact form button, .contact form textarea{
     width: 100%;
     padding: 1em;
-    border: 1px solid #c9e6ff;
 }
 
 .contact form button{
-    background: #c9e6ff;
-    border: 0;
+    background: #FF3D00;
+    border-radius: 15px;
+    height: 65px;
+    color: white;
     text-transform: uppercase;
 }
 
 .contact form button:hover, .contact form button:focus{
-    background: #92bde7;
-    color: #fff;
+    background: #FFF9C4;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F50057;
     outline:0;
-    transition: background-color 0.5s;
+    transition: all 0.3s;
 }
 
 /* LARGE SCREENS */
 @media(min-width:700px){
     .wrapper{
         display: grid;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 1fr;
     }
 
     .wrapper>*{
