--- a/public/css/admin_css/css/detail_News_form.css
+++ b/public/css/admin_css/css/detail_News_form.css
@@ -1,4 +1,3 @@
-
 .newDetail{
     margin: 15px auto;
     text-align: center;
@@ -8,6 +7,7 @@
     margin: 0 auto;
     padding: 25px;
     max-width: 50rem;
+    width: 90%;
     border-radius: 15px;
     background-color: white;
     box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
@@ -18,7 +18,7 @@
     position: relative;
     float: left;
     width: 100%;
-    padding-bottom: 125px;
+    padding-bottom: 25px;
 }
 .contentDetail a{
     right: 0;
@@ -26,7 +26,7 @@
     position: absolute;
 }
 .contentDetail #images{
-    width: 25rem;
+    width: 50%;
     left: 80px;
     top: 110px;
     position: absolute;
@@ -37,8 +37,8 @@
 .contentDetail #tagName{
     width: 8rem;
     padding: 3.5px 0;
-    right: 120px;
-    top: 110px;
+    left: 80px;
+    top: 140px;
     position: absolute;
     border: none;
     border-bottom: 1px solid;
@@ -73,9 +73,10 @@ input:focus{
     background-color: #B3E5FC;
 }
 .contentDetail #describe{
+    overflow-x: hidden;
     text-align: left;
     position: absolute;
-    width: 42rem;
+    width: 88%;
     height: 50px;
     font-size: 13px;
     left: 80px;
@@ -87,7 +88,7 @@ input:focus{
 {
     text-align: left;
     position: absolute;
-    width: 42rem;
+    width: 88%;
     height: 50px;
     font-size: 22px;
     left: 80px;
@@ -106,7 +107,10 @@ input:focus{
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 700;
-    float: right;
+    /*float: right;*/
+    right: 0px;
+    top: 110px;
+    position: absolute;
     background-color: #FAB702;
 }
 .formBlock .btn-detail button{
@@ -122,4 +126,38 @@ input:focus{
     padding: 5px 25px 5px 25px;
     border-radius: 10px;
     font-weight: bold;
+}
+form .imageContent{
+    position: relative;
+}
+form .imageContent input{
+    width: 100%;
+    height: 45px;
+    vertical-align: bottom;
+    border-radius: 10px;
+    margin-top: 35px;
+    margin-bottom: 5px;
+    border: 1px solid #FAB702;
+}
+form .imageContent{
+    text-align: left;
+}
+form .imageContent  span{
+    position: absolute;
+    color: #FAB702;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: white;
+    padding: 5px 10px 5px 10px;
+    bottom: 38px;
+    font-size: 16px;
+}
+@media(max-width:1050px){
+    .contentDetail #describe{
+        width: 80%;
+    }
+    .contentDetail #titleNews
+    {
+        width: 80%;
+    }
 }
