--- a/public/css/admin_css/css/detail_work_form.css
+++ b/public/css/admin_css/css/detail_work_form.css
@@ -1,162 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
-.container{
-    max-width: 700px;
-    width: 100%;
-    background-color: #FFC107;
-    padding: 25px 30px;
-    border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-}
-.container span{
-    color: white;
-}
-.container .title{
-    color: white;
-    font-size: 25px;
-    font-weight: 500;
-    position: relative;
-    margin-bottom: 25px;
-}
-.container .title::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 100px;
-    border-radius: 5px;
-    background: linear-gradient(135deg, #71b7e6, #9b59b6);
-}
-.projectForm form .project-infor{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px 0 12px 0;
-}
-form .project-infor .input-box{
-    margin-bottom: 15px;
-    width: calc(100% / 2 - 20px);
-}
-
-
-form .project-content .input-box{
-    margin-bottom: 15px;
-}
-
-form .input-box span.details{
-    display: block;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
-.project-infor .input-box input{
-    height: 45px;
-    width: 100%;
-    outline: none;
-    font-size: 16px;
-    border-radius: 5px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-form .project-infor select{
-    margin-bottom: 15px;
-    height: 45px;
-    width: 100%;
-    border-radius: 5px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-
-.project-content .input-box input{
-    height: 45px;
-    width: 100%;
-    outline: none;
-    font-size: 16px;
-    border-radius: 5px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-
-form .gender-details .gender-title{
-    font-size: 20px;
-    font-weight: 500;
-}
-form .category{
-    display: flex;
-    width: 80%;
-    margin: 14px 0 ;
-    justify-content: space-between;
-}
-form .category label{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-form .category label .dot{
-    height: 18px;
-    width: 18px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background: #d9d9d9;
-    border: 5px solid transparent;
-    transition: all 0.3s ease;
-}
-
-form .button{
-    width: 100%;
-    height: 45px;
-    margin: 35px 0
-}
-form .button button{
-    width: 100%;
-    background: #FF3D00;
-    border-radius: 15px;
-    height: 65px;
-    color: white;
-    text-transform: uppercase;
-}
-form .button button:hover{
-    background: #FFF9C4;
-    font-size: 20px;
-    font-weight: bold;
-    color: #F50057;
-    outline:0;
-    transition: all 0.3s;
-}
-
-@media(max-width: 584px){
-    .container{
-        max-width: 100%;
-    }
-    form .project-infor .input-box{
-        margin-bottom: 15px;
-        width: 100%;
-    }
-    form .project-content .input-box{
-        margin-bottom: 15px;
-        width: 100%;
-    }
-
-    form .category{
-        width: 100%;
-    }
-
-    .project-infor::-webkit-scrollbar{
-        width: 5px;
-    }
-}
-@media(max-width: 459px){
-    .containerWork .projectForm .category{
-        flex-direction: column;
-    }
-}
-
 .projectForm form .row{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -196,4 +37,7 @@ form .button button:hover{
 }
 .projectForm form .project-infor .input-box{
     margin-bottom: 15px;
+}
+.projectForm form .block_1 .input-box{
+    width: 100%;
 }
