--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -55,6 +55,8 @@ form .field input:valid{
     pointer-events: none;
     transform: translateY(-50%);
     transition: all 0.3s ease;
+    border-radius: 10px;
+    padding: 0 1px 0 1px;
 }
 form .field input:focus ~ label,
 form .field input:valid ~ label{
