--- a/public/css/admin_css/css/detail_employee_form.css
+++ b/public/css/admin_css/css/detail_employee_form.css
@@ -39,3 +39,10 @@ form .avata img{
     grid-template-columns: 1fr;
     margin-top: 15px;
 }
+.empContainer form select{
+    width: 100%;
+    height: 35px;
+    border: none;
+    border-radius: 10px;
+    border-bottom: 3px solid #272c33;
+}
