--- a/public/css/admin_css/css/detail_project_form.css
+++ b/public/css/admin_css/css/detail_project_form.css
@@ -129,7 +129,40 @@ form .button button:hover{
     outline:0;
     transition: all 0.3s;
 }
-
+.project-content .input-box:nth-child(1){
+    display: grid;
+    grid-template-columns: 89% 7% ;
+    grid-gap: 3%;
+}
+.project-content .input-box:nth-child(2){
+    display: grid;
+    grid-template-columns: 89% 7% ;
+    grid-gap: 3%;
+}
+.project-content .input-box:nth-child(3){
+    display: grid;
+    grid-template-columns: 89% 7% ;
+    grid-gap: 3%;
+}
+.project-content .input-box .inpImage input[type="file"]{
+    height: 0;
+    padding: 0;
+    margin: 0;
+}
+.project-content .input-box .inpImage input {
+    border: 1px solid;
+    padding: 5px 15px;
+    border-radius: 15px ;
+    margin: 0;
+}
+.project-content .input-box .inpImage label {
+    font-size: 35px;
+    margin: 0;
+}
+.project-content .input-box .inpImage label:hover {
+    color: white;
+    transition: background-color 0.3s;
+}
 @media(max-width: 584px){
     .container{
         max-width: 100%;
@@ -142,7 +175,10 @@ form .button button:hover{
         margin-bottom: 15px;
         width: 100%;
     }
-
+    .project-content .input-box{
+        display: grid;
+        grid-template-columns: 100% ;
+    }
     form .category{
         width: 100%;
     }
