--- a/public/css/admin_css/css/detail_News_form.css
+++ b/public/css/admin_css/css/detail_News_form.css
@@ -43,6 +43,19 @@
     border: none;
     border-bottom: 1px solid;
 }
+.contentDetail .imgBtn{
+    font-size: 25px;
+    width: 0;
+    left: 220px;
+    top: 135px;
+    position: absolute;
+    border: none;
+    border-bottom: 1px solid;
+}
+.contentDetail .imgBtn:hover{
+    color: #FAB702;
+    transition: color 0.3s;
+}
 .contentDetail #dayInp{
     background-color: #FAB702;
     border: none;
@@ -130,6 +143,9 @@ input:focus{
 form .imageContent{
     position: relative;
 }
+form .imageContent .imgBtn-content{
+
+}
 form .imageContent input{
     width: 100%;
     height: 45px;
@@ -139,9 +155,25 @@ form .imageContent input{
     margin-bottom: 5px;
     border: 1px solid #FAB702;
 }
+
 form .imageContent{
     text-align: left;
 }
+form .imageContent .linkImg{
+    display: grid;
+    grid-template-columns: 89% 7% ;
+    grid-gap: 3%;
+}
+form .imageContent .linkImg .imgBtn-content{
+    font-size: 35px;
+    height: 0;
+    padding: 30px 0 20px 0;
+}
+form .imageContent .linkImg .imgBtn-content:hover{
+    color: #FAB702;
+    transition: color 0.3s;
+}
+
 form .imageContent  span{
     position: absolute;
     color: #FAB702;
